# explorer-r2-sim

./: .gitignore  .gitmodules  README.md
docs/: ANALYSIS.md  PARAMETERS.md
runs/run_20260514T154145Z/: metadata.yaml
src/: vins  vins_camera_models
src/explorer_r2_sim/: .env  CMakeLists.txt  docker-compose.yml  package.xml
src/explorer_r2_sim/config/: bridge.yaml  lio.yaml
src/explorer_r2_sim/config/openvins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/explorer_r2_sim/config/vins/: vins.yaml
src/explorer_r2_sim/docker/: sim-entrypoint.sh  sim.Dockerfile
src/explorer_r2_sim/launch/: cave.launch.py  lio.launch.py  vins.launch.py  vio.launch.py  world.launch.py
src/explorer_r2_sim/models/explorer_r2/: model.sdf
src/explorer_r2_sim/rviz/: sim.rviz
src/explorer_r2_sim/scripts/: analyze_bag.py  gt_to_path.py  lidar_field_adapter.py  record_run.sh
src/explorer_r2_sim/worlds/: cave.sdf  tunnel.sdf
src/livox_ros_driver2_msgs/: CMakeLists.txt  package.xml
src/livox_ros_driver2_msgs/msg/: CustomMsg.msg  CustomPoint.msg
